--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 * {
 	font-family: "Roboto", sans-serif;
 }
+html { 
+  background: url(images/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
