--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 html { 
-	background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
+	background-image: linear-gradient(-225deg, #2CD8D5 0%, #C5C1FF 56%, #FFBAC3 100%);
+	font-family: "Roboto", sans-serif;
 }
