--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
 html { 
-	background-image: linear-gradient(-225deg, #2CD8D5 0%, #C5C1FF 56%, #FFBAC3 100%);
+	background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+	font-family: "Roboto", sans-serif;
 }
