--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 html { 
-	background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+	background-image: linear-gradient(to right, #a8edea 0%, #fed6e3 100%);;
 	font-family: "Roboto", sans-serif;
 }
