--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 html { 
-	background-image: linear-gradient(to right, #a8edea 0%, #fed6e3 100%);;
+	background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 	font-family: "Roboto", sans-serif;
 }
