--- a/style.css
+++ b/style.css
@@ -1,4 +1,75 @@
-html { 
+body {
+	padding: 0;
+	margin: 0;
+}
+
+.hero-gradient {
+	height: 70vh;
+	width: 100vw;
 	background-image: linear-gradient(to right, #e0c3fc 0%, #8ec5fc 100%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.center-wrapper {
+	text-align: center;
+}
+
+.title {
+	font-family: "Fira Sans Condensed", sans-serif;
+	font-weight: bold;
+	color: white;
+	padding: 17pt;
+	display: inline-block;
+	font-size: 40pt;
+	align-self: center;
+	border: 4pt solid white;
+}
+
+
+.black-bar {
+	display: inline-block;
+	text-align: center;
+	padding: 1em 3em;
+	background-color: black;
+	font-size: 12pt;
 	font-family: "Roboto", sans-serif;
+	transform: translateY(-50%);
+}
+
+a {
+	transition: color .1s;
+}
+
+a:hover {
+	color: #ee609c !important;
+}
+
+.black-bar a, .black-bar a:visited {
+	color: white;
+	text-decoration: none;
+}
+
+.black-bar > span:not(:last-child) {
+	padding-right: 5em;
+}
+
+.fadein {
+	animation: fadein .1s;
+}
+@keyframes fadein {
+	from {
+		opacity: 0;
+	}
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
