--- a/style.css
+++ b/style.css
@@ -1,15 +1,26 @@
 body {
 	padding: 0;
 	margin: 0;
+	background-color: #f9f9fc;
+	overflow-x: hidden;
 }
 
-.hero-gradient {
+.hero-gradient-lg {
 	height: 70vh;
 	width: 100vw;
 	background-image: linear-gradient(to right, #e0c3fc 0%, #8ec5fc 100%);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+}
+
+.hero-gradient-sm {
+	height: 30vh;
+	width: 100vw;
+	background-image: linear-gradient(to right, #e0c3fc 0%, #8ec5fc 100%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;	
 }
 
 .center-wrapper {
@@ -36,14 +47,17 @@ body {
 	font-size: 12pt;
 	font-family: "Roboto", sans-serif;
 	transform: translateY(-50%);
+	color: white;
+	font-weight: bold;
 }
 
 a {
 	transition: color .1s;
+	height: 100%;
 }
 
-a:hover {
-	color: #ee609c !important;
+.black-bar a:hover, .active-page {
+	color: #fcc5ed !important;
 }
 
 .black-bar a, .black-bar a:visited {
@@ -72,4 +86,77 @@ a:hover {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+ul {
+	list-style-type: none;
+}
+
+.card {
+	background-color: white;
+	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, .2);
+	animation: fadeup .4s;
+	animation-fill-mode: forwards;
+	width: 50rem;
+	max-width: 80vw;
+	margin-top: 2rem;
+	margin-left: auto;
+	margin-right: auto;
+	opacity: 0;
+	border-radius: 2px;
+}
+
+.card > div.card-content {
+	padding: 1rem 2rem;
+}
+
+.card > div.card-title {
+	display: flex;
+	background-image: linear-gradient(to right, #cfd9df 0%, #e2ebf0 100%);
+	flex-direction: row;
+	border-top-right-radius: 2px;
+	border-top-left-radius: 2px;
+}
+
+.card-title > * {
+	padding-left: 1rem;
+	color: #444;
+}
+
+.card:last-child {
+	margin-bottom: 5rem;
+}
+
+@keyframes fadeup {
+	from {
+		transform: translateY(9rem);
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+.card a, .card a:visited, .card a:hover {
+	color: inherit;
+	text-decoration: none;
+	transition: .2s;
+}
+
+.card a {
+	border-bottom: .2em solid rgba(238, 96, 156, .5);
+}
+
+.card a:hover {
+	border-bottom: .2em solid rgba(238, 96, 156, .8);
+}
+
+ul, p {
+	line-height: 1.5;
+}
+
+.title > a {
+	color: inherit !important;
+	text-decoration: none;
 }
